Traefik-ingress-controller/traefik_dashboard_service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
spec:
  ports:
  - port: 80
    targetPort: 9000
  selector:
    app.kubernetes.io/name: traefik
